First stab at SVM part

--- a/lab1/NLP1_2021_Practical_1_(student_version)-dev.ipynb
+++ b/lab1/NLP1_2021_Practical_1_(student_version)-dev.ipynb
@@ -757,7 +757,7 @@
     "\n",
     "If we consider case 2, suppose we encounter a word $w$ that occurs in positive reviews but not in negative reviews. Then, by definition, \n",
     "$$\n",
-    "p(f | c = 0) = \\frac{T_{w0}}{\\sum_{w' \\in \\mathbf{V}}T_{w'0}} = 0\n",
+    "p(w | c = 0) = \\frac{T_{w0}}{\\sum_{w' \\in \\mathbf{V}}T_{w'0}} = 0\n",
     "$$\n",
     "since $T_{w0} = 0$."
    ]
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,14 +936,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training: 100%|████████████████████| 1800/1800 [00:01<00:00, 946.46it/s]                                                                                 \n"
+      "Training: 100%|████████████████████| 1800/1800 [00:01<00:00, 936.01it/s]                                                                                 \n"
      ]
     },
     {
@@ -957,7 +957,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|████████████████████| 1800/1800 [00:04<00:00, 413.28it/s]                                                                               \n"
+      "Evaluating: 100%|████████████████████| 1800/1800 [00:04<00:00, 413.17it/s]                                                                               \n"
      ]
     },
     {
@@ -971,7 +971,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|████████████████████| 200/200 [00:00<00:00, 403.21it/s]                                                                                 "
+      "Evaluating: 100%|████████████████████| 200/200 [00:00<00:00, 406.29it/s]                                                                                 "
      ]
     },
     {
@@ -994,7 +994,7 @@
        "0.835"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
