uncommenting google drive import

--- a/lab1/NLP1_2021_Practical_1_Tadija.ipynb
+++ b/lab1/NLP1_2021_Practical_1_Tadija.ipynb
@@ -129,7 +129,7 @@
         "from nltk.util import ngrams\n",
         "from nltk.stem.porter import PorterStemmer\n",
         "import sklearn as sk\n",
-        "#from google.colab import drive\n",
+        "from google.colab import drive\n",
         "import pickle\n",
         "import json\n",
         "from collections import Counter\n",
