My final notebook: WIP

--- a/lab1/NLP1_2021_Practical_1_(student_version)-ngram.ipynb
+++ b/lab1/NLP1_2021_Practical_1_(student_version)-ngram.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,13 +308,23 @@
     "        joined_ngrams = [list(ngrams(sent, k)) for k in self.n_grams]\n",
     "        return list(itertools.chain.from_iterable(joined_ngrams))\n",
     "    \n",
-    "    def get_ngram_freq_dict(self, document: list):\n",
+    "    def get_ngram_freq_dict(self, document: list, use_pos=False):\n",
+    "        document = np.concatenate(document)\n",
+    "\n",
     "        # get all words in the document (in lowercase)\n",
-    "        words = list(np.char.lower(np.concatenate(document)[:, 0]))\n",
+    "        words = list(np.char.lower(document[:, 0]))\n",
+    "        pos_tags = document[:, 1]\n",
     "\n",
     "        # apply stemming to the words\n",
     "        if self.stemmer is not None:\n",
     "            words = list(map(self.stemmer.stem, words))\n",
+    "        \n",
+    "        # apply pos tags as suffixes to words\n",
+    "        if use_pos:\n",
+    "            # document = np.concatenate(document)\n",
+    "            # document[:, 0] = np.char.lower(document[:, 0])\n",
+    "            words = np.char.add(np.char.add(np.array(words), \"_\"), pos_tags)\n",
+    "            words = list(words)\n",
     "\n",
     "        # get collection of n-grams, for different n\n",
     "        n_grams = self.get_sentence_ngrams(words)\n",
@@ -325,7 +335,7 @@
     "        n_grams_freq_dict = dict(zip(n_grams_unique, n_grams_counts))\n",
     "        return n_grams_freq_dict\n",
     "    \n",
-    "    def create_vocabulary(self, documents: list, labels: list):\n",
+    "    def create_vocabulary(self, documents: list, labels: list, use_pos=False):\n",
     "        \"\"\"Create a combined vocabulary based on given n-grams, \\forall n.\"\"\"\n",
     "        num_docs = len(documents)\n",
     "        \n",
@@ -347,7 +357,7 @@
     "            class_priors[l] += (1.0 / num_docs)\n",
     "            \n",
     "            # update vocab\n",
-    "            n_grams_freq_dict = self.get_ngram_freq_dict(d)\n",
+    "            n_grams_freq_dict = self.get_ngram_freq_dict(d, use_pos=use_pos)\n",
     "            vocab.update(n_grams_freq_dict)\n",
     "            class_wise_vocab[l].update(n_grams_freq_dict)\n",
     "            \n",
@@ -393,23 +403,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NaiveBayesClassifier:\n",
     "    \"\"\"Implements the NBClassifier.\"\"\"\n",
-    "    def __init__(self, classes, n_grams=[1], stemmer=None, smoothing_kappa=0.0, filter_vocab=False):\n",
+    "    def __init__(self, classes, n_grams=[1], stemmer=None, smoothing_kappa=0.0, filter_vocab=False, use_pos=False):\n",
     "        self.bow = BagOfWords(n_grams=n_grams, classes=classes, stemmer=stemmer)\n",
     "        self.smoothing_kappa = smoothing_kappa\n",
     "        self.classes = classes\n",
     "        self.filter_vocab = filter_vocab\n",
+    "        self.use_pos = use_pos\n",
     "    \n",
     "    def train(self, documents: list, labels: list):\n",
     "        assert len(documents) == len(labels)\n",
     "        assert set(np.unique(labels)) == set(self.classes)\n",
     "\n",
-    "        self.bow.create_vocabulary(documents, labels)\n",
+    "        self.bow.create_vocabulary(documents, labels, use_pos=self.use_pos)\n",
     "        print(f\"Training finished with vocabulary of size {len(self.bow.vocab)}.\")\n",
     "\n",
     "        if self.filter_vocab:\n",
@@ -436,7 +447,7 @@
     "        predictions = []\n",
     "        for i in iterator:\n",
     "            d = documents[i]\n",
-    "            ngram_frequency_dict = self.bow.get_ngram_freq_dict(d)\n",
+    "            ngram_frequency_dict = self.bow.get_ngram_freq_dict(d, use_pos=self.use_pos)\n",
     "\n",
     "\n",
     "            score = {k: np.log(self.bow.class_priors[k]) for k in self.classes}\n",
@@ -457,7 +468,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_based_on_pos_tags(documents, valid_tags=[\"NN\", \"VB\", \"JJ\", \"RB\"]):\n",
+    "    filtered_docs = []\n",
+    "    for d in documents:\n",
+    "        # import ipdb; ipdb.set_trace()\n",
+    "        # sent_lens = [len(x) for x in d]\n",
+    "        # sent_lens = np.cumsum(sent_len)[:-1]\n",
+    "        \n",
+    "        doc = np.concatenate(d)\n",
+    "        idx = np.in1d(doc[:, 1], np.array(valid_tags))\n",
+    "        doc = doc[idx]\n",
+    "        filtered_docs.append([doc.tolist()])\n",
+    "    \n",
+    "    return filtered_docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,13 +499,20 @@
     "    return np.mean((y_true == y_pred).astype(int))\n",
     "\n",
     "\n",
-    "def train_and_evaluate_clf(clf, train_idx, test_idx):\n",
+    "def train_and_evaluate_clf(clf, train_idx, test_idx, filter_on_tags=False):\n",
     "    train_documents = [reviews[i][\"content\"] for i in train_idx]\n",
     "    train_labels = [reviews[i][\"sentiment\"] for i in train_idx]\n",
     "\n",
+    "    if filter_on_tags:\n",
+    "        # import ipdb; ipdb.set_trace()\n",
+    "        train_documents = filter_based_on_pos_tags(train_documents)\n",
+    "\n",
     "    test_documents = [reviews[i][\"content\"] for i in test_idx]\n",
     "    test_labels = [reviews[i][\"sentiment\"] for i in test_idx]\n",
-    "    \n",
+    "\n",
+    "    if filter_on_tags:\n",
+    "        test_documents = filter_based_on_pos_tags(test_documents)\n",
+    "\n",
     "    # train the classifier\n",
     "    clf.train(train_documents, train_labels)\n",
     "\n",
@@ -497,7 +536,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating vocabulary: 100%|████████████████████| 1800/1800 [00:02<00:00, 753.86it/s]                                                                      \n"
+      "Creating vocabulary: 100%|████████████████████| 1800/1800 [00:02<00:00, 759.52it/s]                                                                      \n"
      ]
     },
     {
@@ -512,7 +551,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|████████████████████| 1800/1800 [00:05<00:00, 331.47it/s]                                                                               \n"
+      "Evaluating: 100%|████████████████████| 1800/1800 [00:05<00:00, 334.28it/s]                                                                               \n"
      ]
     },
     {
@@ -526,7 +565,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|████████████████████| 200/200 [00:00<00:00, 330.72it/s]                                                                                 "
+      "Evaluating: 100%|████████████████████| 200/200 [00:00<00:00, 331.12it/s]                                                                                 "
      ]
     },
     {
@@ -940,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,6 +1531,314 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0,    1,    2, ..., 1897, 1898, 1899])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_documents = [reviews[i][\"content\"] for i in train_idx]\n",
+    "train_labels = [reviews[i][\"sentiment\"] for i in train_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bow = BagOfWords(n_grams=[1], stemmer=stemmer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Two', 'CD'],\n",
+       " ['teen', 'JJ'],\n",
+       " ['couples', 'NNS'],\n",
+       " ['go', 'VBP'],\n",
+       " ['to', 'TO'],\n",
+       " ['a', 'DT'],\n",
+       " ['church', 'NN'],\n",
+       " ['party', 'NN'],\n",
+       " [',', ','],\n",
+       " ['drink', 'NN'],\n",
+       " ['and', 'CC'],\n",
+       " ['then', 'RB'],\n",
+       " ['drive', 'NN'],\n",
+       " ['.', '.']]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_documents[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{',_,': 1,\n",
+       " '._.': 1,\n",
+       " 'a_DT': 1,\n",
+       " 'and_CC': 1,\n",
+       " 'church_NN': 1,\n",
+       " 'coupl_NNS': 1,\n",
+       " 'drink_NN': 1,\n",
+       " 'drive_NN': 1,\n",
+       " 'go_VBP': 1,\n",
+       " 'parti_NN': 1,\n",
+       " 'teen_JJ': 1,\n",
+       " 'then_RB': 1,\n",
+       " 'to_TO': 1,\n",
+       " 'two_CD': 1}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow.get_ngram_freq_dict([train_documents[0][0]], use_pos=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{',': 1,\n",
+       " '.': 1,\n",
+       " 'a': 1,\n",
+       " 'and': 1,\n",
+       " 'church': 1,\n",
+       " 'coupl': 1,\n",
+       " 'drink': 1,\n",
+       " 'drive': 1,\n",
+       " 'go': 1,\n",
+       " 'parti': 1,\n",
+       " 'teen': 1,\n",
+       " 'then': 1,\n",
+       " 'to': 1,\n",
+       " 'two': 1}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow.get_ngram_freq_dict([train_documents[0][0]], use_pos=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating vocabulary: 100%|████████████████████| 1800/1800 [00:11<00:00, 150.01it/s]                                                                      \n"
+     ]
+    }
+   ],
+   "source": [
+    "bow.create_vocabulary(train_documents, train_labels, use_pos=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"'\", \"''\", \"'ll\", \"'re\", \"'s\", ',', '-lrb-', '-rrb-', '.', '102']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(bow.class_wise_vocab[\"POS\"].keys())[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating vocabulary: 100%|████████████████████| 1800/1800 [00:13<00:00, 131.65it/s]                                                                      \n"
+     ]
+    }
+   ],
+   "source": [
+    "bow.create_vocabulary(train_documents, train_labels, use_pos=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"''_''\",\n",
+       " \"'_''\",\n",
+       " \"'_POS\",\n",
+       " \"'ll_MD\",\n",
+       " \"'re_VBP\",\n",
+       " \"'s_POS\",\n",
+       " \"'s_VBZ\",\n",
+       " ',_,',\n",
+       " '-lrb-_-LRB-',\n",
+       " '-rrb-_-RRB-']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(bow.class_wise_vocab[\"POS\"].keys())[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating vocabulary: 100%|████████████████████| 1800/1800 [00:04<00:00, 431.75it/s]                                                                      \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training finished with vocabulary of size 54555.\n",
+      "Filtered vocabulary. Size of new vocabulary: 21540\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|████████████████████| 1800/1800 [00:07<00:00, 247.83it/s]                                                                               \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtained accuracy using NaiveBayesClassifier on train set: 0.953\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|████████████████████| 200/200 [00:00<00:00, 244.29it/s]                                                                                 "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtained accuracy using NaiveBayesClassifier on test set: 0.880\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.88"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# split into training and testing data\n",
+    "cv = np.array([reviews[i][\"cv\"] for i in range(len(reviews))])\n",
+    "labels = np.array([reviews[i][\"sentiment\"] for i in range(len(reviews))])\n",
+    "\n",
+    "train_idx = np.where(cv < 900)[0]\n",
+    "test_idx = np.where(cv >= 900)[0]\n",
+    "\n",
+    "clf = NaiveBayesClassifier(classes=[\"POS\", \"NEG\"], filter_vocab=True, use_pos=True)\n",
+    "train_and_evaluate_clf(clf, train_idx, test_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "id": "NOvjYe-t2Br6"
@@ -1521,13 +1868,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = filter_based_on_pos_tags(train_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(221, 1)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X[0][0]), len(X[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1800"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {
     "id": "CCUPlPozCYUX"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating vocabulary: 100%|████████████████████| 1800/1800 [00:01<00:00, 1456.10it/s]                                                                     \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training finished with vocabulary of size 26655.\n",
+      "Filtered vocabulary. Size of new vocabulary: 10647\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|████████████████████| 1800/1800 [00:02<00:00, 657.24it/s]                                                                               \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtained accuracy using NaiveBayesClassifier on train set: 0.944\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|████████████████████| 200/200 [00:00<00:00, 649.73it/s]                                                                                 "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtained accuracy using NaiveBayesClassifier on test set: 0.875\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.875"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# split into training and testing data\n",
+    "cv = np.array([reviews[i][\"cv\"] for i in range(len(reviews))])\n",
+    "labels = np.array([reviews[i][\"sentiment\"] for i in range(len(reviews))])\n",
+    "\n",
+    "train_idx = np.where(cv < 900)[0]\n",
+    "test_idx = np.where(cv >= 900)[0]\n",
+    "\n",
+    "clf = NaiveBayesClassifier(classes=[\"POS\", \"NEG\"], filter_vocab=True, use_pos=True)\n",
+    "train_and_evaluate_clf(clf, train_idx, test_idx, filter_on_tags=True)"
    ]
   },
   {
